# claude-plays-zelda

./: .env.example  .gitignore  ADDITIONAL_FINDINGS.md  AI_IMPLEMENTATION_ANALYSIS.md  ANALYSIS_SUMMARY.txt  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LEGAL.md  LICENSE  PRODUCTION_ROADMAP.md  PR_DESCRIPTION.md  QUICKSTART.md  README.md  RELEASE_ASSESSMENT.md  SECURITY.md  SETUP_GUIDE.md  SIMA_ARCHITECTURE.md  config.yaml  docker-compose.yml  launch_agent.bat  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
claude_plays_zelda/: __init__.py  cli.py
claude_plays_zelda/ai/: __init__.py  action_planner.py  claude_agent.py  context_manager.py  memory.py
claude_plays_zelda/core/: __init__.py  config.py  game_loop.py  orchestrator.py  validators.py
claude_plays_zelda/emulator/: __init__.py  emulator_manager.py  input_controller.py  screen_capture.py
claude_plays_zelda/game/: __init__.py  combat_ai.py  dungeon_navigator.py  game_knowledge.py  puzzle_solver.py
claude_plays_zelda/streaming/: __init__.py  highlight_generator.py  obs_controller.py  stream_manager.py  twitch_bot.py
claude_plays_zelda/utils/: __init__.py  image_utils.py  logger.py
claude_plays_zelda/vision/: __init__.py  cache.py  game_state_detector.py  map_analyzer.py  object_detector.py  ocr.py
claude_plays_zelda/web/: __init__.py  security.py  server.py  websocket_handler.py
claude_plays_zelda/web/templates/: dashboard.html
config/: prometheus.yml
data/: test_strategies.json
docs/: API.md  IMPROVEMENTS.md  PROJECT_SUMMARY.md  REPOSITORY_ANALYSIS.md
examples/: sima_agent_demo.py
scripts/: init_db.sql  verify_api.py  verify_config.py  verify_live_integration.py  verify_logging.py  verify_nes_transition.py  verify_setup.py  verify_sima_scaffolds.py  verify_zelda_integration.py
src/: __init__.py
src/agent/: __init__.py  action_planner.py  claude_client.py  context_manager.py  memory_system.py  multimodal_interface.py  reasoning_engine.py  sima_adapter.py
src/cv/: game_state_analyzer.py
src/emulator/: __init__.py  emulator_interface.py  input_controller.py  screen_capture.py
src/game/: __init__.py  combat_ai.py  navigation.py  puzzle_solver.py
src/learning/: __init__.py  strategy_bank.py
src/legacy_cv/: DEPRECATED.md  __init__.py  game_state_analyzer.py  map_recognizer.py  object_detector.py  ocr_engine.py
src/sima/: README.md  __init__.py  action_schema.py  memory_critic.py  pixels_to_actions_agent.py  temporal_buffer.py  vision_prompts.py
src/streaming/: __init__.py  dashboard.py  stats_tracker.py  twitch_bot.py
tests/: __init__.py  test_config.py
tests/unit/: test_action_planner.py  test_game_loop_state_machine.py  test_game_state_detector.py  test_memory_system.py  test_navigator.py  test_security.py  test_vision.py
